@@ -1,3 +1,4 @@
+inst/testfiles
 *~
 *.o
 *.so
