@@ -9,7 +9,7 @@ Description: Provides an efficient C++ code for computing an
  up-down constraints, and label constraints.
 License: GPL-3
 RoxygenNote: 7.1.1
-Suggests: testthat
+Suggests: testthat, PeakError, ggplot2
 Depends: R (>= 2.10)
 LinkingTo: Rcpp
 Imports: Rcpp, data.table
